--- a/views/layouts/layout.ejs
+++ b/views/layouts/layout.ejs
@@ -7,10 +7,12 @@
     <title>My library</title>
   </head>
   <body>
-    Before
+    <br />
+    <%- include('../partials/header.ejs') %>
+    <br />
+    <%- include('../partials/errorMessage.ejs') %>
     <br />
     <%- body %>
     <br />
-    After
   </body>
 </html>
